# cmake-build-system

./: .gitignore  CMakeLists.txt  Makefile  README.md  sam4e-xp.cmake
app/: CMakeLists.txt  main.c
board/sam4-xp/: 0100.cmake
sdk/: CMakeLists.txt  README.md  sdk_config.h
sdk/bsp/sam4/: CMakeLists.txt
sdk/bsp/sam4/linker/sam4e16/: flash.ld
sdk/toolchain/: atxmega128a1u.cmake  atxmega128a3u.cmake
sdk/toolchain/common/: avr-gcc.cmake
